@@ -1,0 +1,8 @@
+CORE
+main.c
+--floatbv --float-overflow-check
+^EXIT=0$
+^SIGNAL=0$
+^VERIFICATION SUCCESSFUL$
+--
+^warning: ignoring
